<!--
  ~  Created by Azamov X ㋡ on 11/21/23, 2:02 AM
  ~  Copyright (c) 2023 . All rights reserved.
  ~  Last modified 11/21/23, 2:02 AM
  ~
  ~
  -->

<resources>
    <string name="app_name">Kitsune</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_review">Review Details</string>
    <string name="anime_details">Anime Details</string>
    <string name="character_details">Character Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="source_not_found">
        Couldn\'t find anything X( \n
        Try another source.
    </string>
    <string name="episode">Episode %1$s</string>

    <string name="not_supported">JIKAN Not Loaded Source :(</string>
    <string name="seek_seconds_forward">+%d seconds</string>
    <string name="seek_seconds_backward">-%d seconds</string>

    <string name="retry">Retry</string>
    <string name="next_episode">Next Episode</string>
    <string name="quality_auto">Auto</string>
    <string name="speed">1x</string>
    <string name="ep_x_on_y">Ep. %1$d on %2$s.</string>
    <string name="previous_episode">Previous Episode</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="synopsis">Synopsis</string>
    <string name="movies">Movies</string>
    <string name="new_season">New Season</string>
    <string name="recent_subbed_episodes">Recent Subbed Episodes</string>
    <string name="today_s_selection">Today\'s Selection</string>
    <string name="episode_num">8 Episodes</string>
    <string name="play_movie">Play movie</string>
    <string name="released">Released:</string>
    <string name="status">Status:</string>
    <string name="type">Type:</string>
    <string name="no_data">No Data</string>
    <string name="search_hint">Search…</string>
    <string name="result_go_back">goback</string>
    <string name="favorite">Add to Favorites</string>
    <string name="order">Order Animes</string>
    <string name="movie_not_released">Movie not released yet</string>
    <string name="episode_title">%s - %s</string>
    <string name="skip_loading">Skip Intro</string>
    <string name="total_episodes">%s Episodes</string>
    <string name="video_quality">Video Quality</string>
    <string name="video_skip_op">Skip Intro</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="donation">Donation</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Skip Intro Time</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="quality">Quality</string>
    <string name="title_settings">Settings</string>
    <string name="app_describe">test</string>
    <string name="download">Download</string>
    <string name="next">Next: </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_anilist">Sign In with AniList</string>
    <string name="sign_up">Register</string>
    <string name="terms_of_use"><![CDATA[Terms & Privacy]]></string>
    <string name="sign_in_as_guest">Continue as Guest</string>
    <string name="intro_slogan">Watch ON-THE-GO</string>
    <string name="important_to_know">Important to Know</string>
    <string name="login_info">You’ll be redirected to anilist.co to login/register. Make sure the URL is anilist.co before entering your email and password.</string>
    <string name="sign_in">Sign In</string>
    <string name="guest_message">Want to track your favorite Anime?</string>
    <string name="log_out">Log Out</string>
    <string name="animes">Animes</string>
    <string name="no_search_result">Sorry, Couldn\'t find anime with this keyword!</string>
    <string name="shared_anime_title">shared_anime_title</string>
    <string name="shared_anime_image">shared_anime_image</string>
    <string name="player_settings">Player Settings</string>
    <string name="donate_creator">Donate Author</string>
    <string name="connecting_please_wait">Connecting, Please Wait!</string>

    <string name="card_transition_name">anime_card_%1$s</string>
    <string name="anime_card_detail_transition_name">anime_card_detail</string>
    <string name="add_to_list">Add to List</string>
    <string name="option_1">Set as Complete</string>
    <string name="option_2">Set as Watching</string>
    <string name="option_3">Set as Planning</string>
    <string name="completed">Completed</string>
    <string name="watching">Watching</string>
    <string name="planning">Planning</string>
    <string name="dropped">Dropped</string>
    <string name="filler">FILLER</string>
    <string name="list_editor">List Editor</string>
    <string name="watch">Watch</string>
    <string name="progress">Progress</string>
    <string name="score">Score</string>
    <string name="score_suffix">/ 10</string>
    <string name="started_at">Started At</string>
    <string name="completed_at">Completed At</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="network_settings">Network Settings</string>
    <string name="provider_title">Select Provider</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="anime_provider">anime_provider</string>
    <string name="dns_provider">dns_provider</string>
    <string name="provider_settings">Provider Settings</string>
    <string name="skip_delay">skip_delay</string>
    <string name="forward_seek">forward_seek</string>
    <string name="backward_seek">backward_seek</string>
    <string name="pip">pip</string>
    <string name="channel_name">AnimityNotifications</string>
    <string name="channel_description">Animity notifications for anime airing</string>
    <string name="notification_title">New Notification</string>
    <string name="notifications">Notifications</string>
    <string name="quit">Quit Notifications</string>
    <string name="option_4">Set as Stopped Watching</string>
    <string name="paused">Paused</string>
    <string name="option_5">Set as Paused</string>
    <string name="message">Messages</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_start_date">Sort by Start Date</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_avg_score">Sort by Avg Score</string>
    <string name="sort_by_trending">Sort by Trending</string>
    <string name="sort_by_favorites">Sort by Favorites</string>
    <string name="sort_by_episode_size">Sort by Episode Size</string>
    <string name="general">General</string>
    <string name="check_for_update">Check for Updates…</string>
    <string name="check_for_update_key">check_for_update_key</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="author">Author</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="hash_tag">HashTag</string>


    <string name="repo">professorDeveloper/Kitsune-App</string>
    <string name="checking_for_update">Checking for Update</string>
    <string name="available">Available</string>
    <string name="lets_go">Download</string>
    <string name="cope">Dissmis</string>
    <string name="dont_show_again">Don\'t show again for version %1$s</string>
    <string name="no_update_found">No Update Found</string>
    <string name="downloading_update">Downloading Update %1$s</string>
    <string name="title_activity_main_tv">Leanback MainTvActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>


</resources>