<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/result_poster_holder"
                            android:layout_width="100dp"
                            android:layout_height="140dp"
                            android:layout_marginStart="8dp"
                            android:elevation="10dp"
                            android:transitionName="@string/anime_card_detail_transition_name"
                            app:cardCornerRadius="5dp">

                            <ImageView
                                android:id="@+id/details_poster"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/result_title"
                                style="@style/Headline5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50dp"
                                android:textColor="@color/textColor"
                                android:textSize="20sp"
                                android:textStyle="normal"
                                tools:text="The Perfect " />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"
                                    android:text="@string/released"
                                    android:textColor="@color/grayTextColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text="2021 nda" />

                                <TextView
                                    android:id="@+id/releaseDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"
                                    android:textColor="@color/textColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text="2021 nda" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"
                                    android:text="@string/status"
                                    android:textColor="@color/grayTextColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text="2021 nda" />

                                <TextView
                                    android:id="@+id/status"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"
                                    android:textColor="@color/textColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text="2021 nda" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"
                                    android:text="@string/type"
                                    android:textColor="@color/grayTextColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text="2021 nda" />

                                <TextView
                                    android:id="@+id/type"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"

                                    android:textColor="@color/textColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text="2021 nda" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/nextEpisodeContainer"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/episodeToBeReleased"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"
                                    android:text="@string/next"
                                    android:textColor="@color/grayTextColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text="Episode 13" />

                                <TextView
                                    android:id="@+id/releaseTime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:lineSpacingExtra="3sp"
                                    android:paddingTop="3sp"
                                    android:textColor="@color/textColor"
                                    android:textSize="15sp"
                                    android:textStyle="normal"
                                    tools:text=" Monday 13 Dec, 04:00 AM" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/setType"
                        style="@style/GreenButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:paddingEnd="20dp"
                        android:text="@string/add_to_list"
                        android:visibility="gone"
                        app:icon="@drawable/ic_down_arrow"
                        tools:visibility="visible" />

                    <include
                        android:id="@+id/animeInfoLayout"
                        layout="@layout/item_anime_details" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/genreGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>
            </com.google.android.material.appbar.AppBarLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
